# NerdFarmDemo

./: .env.example  .gitignore  README.md  frontend.py  main.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  documents.py  drafts.py  edits.py
app/document_processor/: __init__.py  extractor.py  schemas.py  vision_processor.py
app/generation/: __init__.py  drafter.py  llm.py  prompts.py
app/learning/: __init__.py  simple_edit_store.py
app/persistence/: __init__.py  base.py  factory.py  stores.py
app/retrieval/: __init__.py  bm25_store.py  embeddings.py  hybrid_search.py  reranker.py  retriever.py  store.py
docs/: ARCHITECTURE.md  EVALUATION.md
sample_docs/: case_facts_001.txt  notice_001.txt  title_review_001.txt
sample_outputs/: case_fact_summary.md  notice_summary.md  title_review_summary.md
tests/: test_generation.py  test_learning.py  test_retrieval.py
